removing home and name from banner to fix content overflow

--- a/facebook.css
+++ b/facebook.css
@@ -5,8 +5,9 @@
 .fbx.home #rightCol,
 #pagelet_welcome_box,
 #pagelet_bookmark_nav,
-#navHeader { 
-  display: none !important; 
+#navHeader, #navHome,
+.headerTinymanName {
+  display: none !important;
 }
 
 /* News feed
@@ -15,7 +16,7 @@
 /* Skinny up the News feed after removing all the ads */
 .fbx.home #globalContainer {
   left: -96px; /* Places the side nav in the left margin. */
-  width: 729px;
+  width: 731px;
 }
 /* Make the news feed stories span the full width of the container */
 .homeWiderContent .uiStreamStory,
@@ -28,7 +29,7 @@
 
 /* Shortening the top bar to work with the single column layout. Overly specific use of ids to override FB's CSS. */
 .fbx.home #blueBar #pageHead {
-  width: 545px;
+  width: 550px;
 }
 .fbx.home #navSearch {
   width: 230px;
